==> feaser/openblt/Target/Demo/ARMCM33_STM32L5_Nucleo_L552ZE_Keil/Prog/boot.c <==
#include "header.h"                                    /* generic header               */

static void BootComRs232Init(void)
{
  /* Configure UART peripheral. */
  rs232Handle.Instance = LPUART1;
  rs232Handle.Init.BaudRate = 57600;
  rs232Handle.Init.WordLength = UART_WORDLENGTH_8B;
  rs232Handle.Init.StopBits = UART_STOPBITS_1;
  rs232Handle.Init.Parity = UART_PARITY_NONE;
  rs232Handle.Init.Mode = UART_MODE_TX_RX;
  rs232Handle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
  rs232Handle.Init.OneBitSampling = UART_ONE_BIT_SAMPLE_DISABLE;
  rs232Handle.Init.ClockPrescaler = UART_PRESCALER_DIV4;
  rs232Handle.AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_NO_INIT;
  rs232Handle.FifoMode = UART_FIFOMODE_DISABLE;
  /* Initialize the UART peripheral. */
  HAL_UART_Init(&rs232Handle);
}

static unsigned char Rs232ReceiveByte(unsigned char *data)
{
  HAL_StatusTypeDef result;

  /* receive a byte in a non-blocking manner */
  result = HAL_UART_Receive(&rs232Handle, data, 1, 0);
  /* process the result */
  if (result == HAL_OK)
  {
    /* success */
    return 1;
  }
  /* error occurred */
  return 0;
}

static void BootComCanInit(void)
{
  unsigned long       rxMsgId = BOOT_COM_CAN_RX_MSG_ID;
  FDCAN_FilterTypeDef filterConfig;
  tCanPeriphParams    periphParams;
  tCanBitTimingConfig bittimingConfig = { 0 };
#if (BOOT_COM_CAN_FD_ENABLE > 0)
  tCanBitTimingConfig bittimingConfigBRS = { 0 };
#endif

  /* set the CAN controller channel, which is needed by HAL_FDCAN_MspInit(). */
  canHandle.Instance = FDCAN1;
  /* call HAL_FDCAN_MspInit() here already, even though this is done automatically later
   * on in the call to HAL_FDCAN_Init(). HAL_FDCAN_MspInit() configures the source clock,
   * which should be done first, otherwise the call to LL_RCC_GetFDCANClockFreq() to
   * obtain the FDCAN clock frequency returns an incorrect value. the FDCAN clock
   * frequency is needed to properly calculate the bittiming, which is turn needs to be
   * done before calling HAL_FDCAN_Init(). explicitly calling HAL_FDCAN_MspInit() here
   * one extra time works around this chicken and egg type problem. when CubeMX is not
   * used in a project and therefore HAL_FDCAN_MspInit() is not generated, it still works
   * because the weak HAL_FDCAN_MspInit() is then called.
   */
  HAL_FDCAN_MspInit(&canHandle);

#if (BOOT_COM_CAN_FD_ENABLE > 0)
  /* determine if the bitrate switch feature should be used. note that you cannot use
   * BOOT_COM_CAN_FD_BRS_BAUDRATE in a preprocessor compile-time check, because this
   * macro might be set to a function call, instead of just a baudrate value.
   */
  if (BOOT_COM_CAN_FD_BRS_BAUDRATE > 0)
  {
    canFdBitrateSwitchUsed = 1U;
  }
  else
  {
    canFdBitrateSwitchUsed = 0U;
  }

  /* calculate the data bittiming configuration with enabled bitrate switch feature. */
  if (canFdBitrateSwitchUsed == 1U)
  {
    /* store CAN peripheral parameters related to the data bittiming configuration. */
    periphParams.base_freq = HAL_RCCEx_GetPeriphCLKFreq(RCC_PERIPHCLK_FDCAN);
    periphParams.prescaler_min = 1U;
    periphParams.prescaler_max = 32U;
    periphParams.tseg1_min = 1U;
    periphParams.tseg1_max = 32U;
    periphParams.tseg2_min = 1U;
    periphParams.tseg2_max = 16U;
    /* attempt to find a matching data bittiming configuration. */
    (void)CanCalculateBitTimingConfig(BOOT_COM_CAN_FD_BRS_BAUDRATE, &periphParams,
                                      &bittimingConfigBRS);
  }
#endif

  /* store CAN peripheral parameters related to the nominal bittiming configuration. */
  periphParams.base_freq = HAL_RCCEx_GetPeriphCLKFreq(RCC_PERIPHCLK_FDCAN);
  periphParams.prescaler_min = 1U;
  periphParams.prescaler_max = 512U;
  periphParams.tseg1_min = 1U;
  periphParams.tseg1_max = 256U;
  periphParams.tseg2_min = 1U;
  periphParams.tseg2_max = 128U;
  /* attempt to find a matching nominal bittiming configuration. */
  (void)CanCalculateBitTimingConfig(BOOT_COM_CAN_BAUDRATE, &periphParams,
                                    &bittimingConfig);

  /* set the CAN controller configuration. */
  canHandle.Init.ClockDivider = FDCAN_CLOCK_DIV1;
  canHandle.Init.FrameFormat = FDCAN_FRAME_CLASSIC;
  canHandle.Init.Mode = FDCAN_MODE_NORMAL;
  canHandle.Init.AutoRetransmission = ENABLE;
  canHandle.Init.TransmitPause = ENABLE;
  canHandle.Init.ProtocolException = DISABLE;
  canHandle.Init.NominalPrescaler = bittimingConfig.prescaler;
  canHandle.Init.NominalTimeSeg1 = bittimingConfig.tseg1;
  canHandle.Init.NominalTimeSeg2 = bittimingConfig.tseg2;
  canHandle.Init.NominalSyncJumpWidth = bittimingConfig.sjw;
  canHandle.Init.DataPrescaler = 1;
  canHandle.Init.DataSyncJumpWidth = 1;
  canHandle.Init.DataTimeSeg1 = 1;
  canHandle.Init.DataTimeSeg2 = 1;
#if (BOOT_COM_CAN_FD_ENABLE > 0)
  if (canFdBitrateSwitchUsed == 0U)
  {
    canHandle.Init.FrameFormat = FDCAN_FRAME_FD_NO_BRS;
  }
  else
  {
    canHandle.Init.FrameFormat = FDCAN_FRAME_FD_BRS;
    canHandle.Init.DataPrescaler = bittimingConfigBRS.prescaler;
    canHandle.Init.DataTimeSeg1 = bittimingConfigBRS.tseg1;
    canHandle.Init.DataTimeSeg2 = bittimingConfigBRS.tseg2;
    canHandle.Init.DataSyncJumpWidth = bittimingConfigBRS.sjw;
  }
#endif
  /* does the message to be received have a standard 11-bit CAN identifier? */
  if ((rxMsgId & 0x80000000) == 0)
  {
    canHandle.Init.StdFiltersNbr = 1;
    canHandle.Init.ExtFiltersNbr = 0;
  }
  else
  {
    canHandle.Init.StdFiltersNbr = 0;
    canHandle.Init.ExtFiltersNbr = 1;
  }
  canHandle.Init.TxFifoQueueMode = FDCAN_TX_FIFO_OPERATION;
  /* initialize the CAN controller. this only fails if the CAN controller hardware is
   * faulty. no need to evaluate the return value as there is nothing we can do about
   * a faulty CAN controller.
   */
  (void)HAL_FDCAN_Init(&canHandle);

  /* configure the reception filter. note that the implementation of this function
   * always returns HAL_OK as long as the CAN controller is initialized, so no need to
   * evaluate the return value.
   */
  if ((rxMsgId & 0x80000000) == 0)
  {
    filterConfig.IdType = FDCAN_STANDARD_ID;
  }
  else
  {
    filterConfig.IdType = FDCAN_EXTENDED_ID;
    /* negate the ID-type bit */
    rxMsgId &= ~0x80000000;
  }
  filterConfig.FilterIndex = 0;
  filterConfig.FilterType = FDCAN_FILTER_DUAL;
  filterConfig.FilterConfig = FDCAN_FILTER_TO_RXFIFO0;
  filterConfig.FilterID1 = rxMsgId;
  filterConfig.FilterID2 = rxMsgId;
  (void)HAL_FDCAN_ConfigFilter(&canHandle, &filterConfig);

  /* configure global filter to reject all non-matching frames. */
  HAL_FDCAN_ConfigGlobalFilter(&canHandle, FDCAN_REJECT, FDCAN_REJECT, 
                               FDCAN_REJECT_REMOTE, FDCAN_REJECT_REMOTE);
  
#if (BOOT_COM_CAN_FD_ENABLE > 0)
  if (canFdBitrateSwitchUsed == 1U)
  {
    /* configure and enable the transmit delay compensation, which is required if the
     * bitrate switch feature is enabled. recommended settings:
     * - offset: DataTimeSeg1 * DataPrescaler
     * - filter: 0
     */
    (void)HAL_FDCAN_ConfigTxDelayCompensation(&canHandle, bittimingConfigBRS.tseg1 *
                                              bittimingConfigBRS.prescaler, 0U);
  }
#endif

  /* start the CAN peripheral. no need to evaluate the return value as there is nothing
   * we can do about a faulty CAN controller. */
  (void)HAL_FDCAN_Start(&canHandle);
}

static void BootComCanCheckActivationRequest(void)
{
  unsigned long rxMsgId = BOOT_COM_CAN_RX_MSG_ID;
  unsigned char packetIdMatches = 0;
  FDCAN_RxHeaderTypeDef rxMsgHeader;
#if (BOOT_COM_CAN_FD_ENABLE > 0)
  static const unsigned char dlc2len[] = { 0,  1,  2,  3,  4,  5,  6,  7,
                                           8, 12, 16, 20, 24, 32, 48, 64 };
  unsigned char rxMsgData[64];
#else
  unsigned char rxMsgData[8];
#endif
  unsigned char rxMsgLen;
  HAL_StatusTypeDef rxStatus = HAL_ERROR;

  /* poll for received CAN messages that await processing. */
  if (HAL_FDCAN_GetRxFifoFillLevel(&canHandle, FDCAN_RX_FIFO0) > 0)
  {
    /* attempt to read the newly received CAN message from its buffer. */
    rxStatus = HAL_FDCAN_GetRxMessage(&canHandle, FDCAN_RX_FIFO0, &rxMsgHeader,
                                      rxMsgData);
  }

  /* only continue processing the CAN message if something was received. */
  if (rxStatus == HAL_OK)
  {
    /* check if this message has the configured CAN packet identifier. */
    if ((rxMsgId & 0x80000000) == 0)
    {
      /* was an 11-bit CAN message received that matches? */
      if ( (rxMsgHeader.Identifier == rxMsgId) &&
           (rxMsgHeader.IdType == FDCAN_STANDARD_ID) )
      {
        /* set flag that a packet with a matching CAN identifier was received. */
        packetIdMatches = 1;
      }
    }
    else
    {
      /* negate the ID-type bit */
      rxMsgId &= ~0x80000000;
      /* was an 29-bit CAN message received that matches? */
      if ( (rxMsgHeader.Identifier == rxMsgId) &&
           (rxMsgHeader.IdType == FDCAN_EXTENDED_ID) )
      {
        /* set flag that a packet with a matching CAN identifier was received. */
        packetIdMatches = 1;
      }
    }

    /* only continue if a packet with a matching CAN identifier was received. */
    if (packetIdMatches == 1)
    {
      /* obtain the CAN message length. */
#if (BOOT_COM_CAN_FD_ENABLE > 0)
      rxMsgLen = 0;
      if (rxMsgHeader.DataLength <= sizeof(dlc2len)/sizeof(dlc2len[0]))
      {
        rxMsgLen = dlc2len[rxMsgHeader.DataLength];
      }
#else
      rxMsgLen = (unsigned char)(rxMsgHeader.DataLength);
#endif
      /* check if this was an XCP CONNECT command */
      if ((rxMsgData[0] == 0xff) && (rxMsgLen == 2))
      {
        /* connection request received so start the bootloader */
        BootActivate();
      }
    }
  }
}
